--- a/part/style.scss
+++ b/part/style.scss
@@ -1,6 +1,12 @@
 @import 'variables';
-@import 'global';
 @import 'mixins';
+@import 'global';
 @import 'header';
+@import 'about';
+@import 'ingredients';
+@import 'menu';
+@import 'reviews';
+@import 'reservation';
+@import 'footer';
 
 
