--- a/part/_global.scss
+++ b/part/_global.scss
@@ -13,7 +13,7 @@ body {
         size: 16px;
     }
     color: $color3_gray;
-    line-height: 1.18em;
+    line-height: 1.8em;
 }
 
 .container {
@@ -21,6 +21,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     display: flex;
+    justify-content: space-between;
 
     @media screen and (max-width: $tablet){
         max-width: 648px;
