--- a/part/_header.scss
+++ b/part/_header.scss
@@ -1,4 +1,67 @@
 .header{
     @include section(750px);
     @include section_picture('images/header.jpg');
+
+    .container{
+        flex-direction: column;
+    }    
+
+    
+
+    &__text{
+        font-size: 70px;
+        text-align: center;
+        line-height: 1.5em;
+        font-family: $fonts1;
+        color: $color1_white;
+        letter-spacing: 3px;
+        text-shadow: 2px 2px 5px #000000;
+        
+    }
+
+    &__text::after {
+        content: url(images/before_white.png);
+        display: block;
+        margin-top: 58px;
+        
+        
+    }
+
+    &__menu {
+        @include phone{
+            flex-direction: column;
+        align-items: center;
+
+        }
+
+        @include tablet{
+            flex-direction: column;
+            align-items: center;
+        }
+
+        display: flex;
+        justify-content: center;
+        margin-top: 64px;
+        
+        
+        
+    
+        .menu__item {
+            @include tablet{
+                margin-bottom: 37px;
+            }
+            height: 80px;
+            border: 1px solid $color1_white;
+            width: 250px;
+            margin:0 17px;
+            font-size: 18px;
+            text-align: center;
+            color: $color1_white;
+            line-height: 80px;
+            background-color: rgba(255, 255, 255, 0.63);
+
+
+        }
+    }    
 }
+
